syntax = "proto3";

option java_package = "com.skiff.protobuf.callback";

option java_outer_classname = "RpcCallback";

message CallbackRequest {
  /**
   * serviceName: service name
   */
  string serviceName = 1;
  /**
   * bean: bean name
   */
  string bean = 2;
  /**
   * params: params
   */
  string params = 3;
}