syntax = "proto3";

option java_package = "com.skiff.protobuf.grpc";
option java_outer_classname = "RpcCallbackGrpc";

import 'Result.proto';
import 'Callback.proto';

service CallbackService {
  rpc callback (CallbackRequest) returns (Result);
}