syntax = "proto3";

option java_package = "com.skiff.protobuf.registry";

option java_outer_classname = "RpcRegistry";

message RegistryRequest {
  /**
   * serviceName: service name
   */
  string serviceName = 1;

  /**
   * ip: ip address
   */
  string ip = 2;
  /**
   * port: port
   */
  int32 port = 3;
}